升级有漏洞的依赖